# DeptSLM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase3_schema.py  0002_phase4_documents.py  0003_phase5_extraction.py  0004_phase6_vector_indexing.py  0005_phase7_rag_answers.py  0006_phase8_rag_feedback.py  0007_phase9_evaluation_runner.py
apps/api/app/: __init__.py  admin.py  audit.py  auth.py  authorization.py  database.py  document_repositories.py  document_services.py  document_storage.py  document_upload.py  evaluation_admin.py  evaluation_artifacts.py  evaluation_domain.py  evaluation_request_body.py  evaluation_services.py  evaluation_suites.py  extraction_domain.py  extraction_repositories.py  extraction_services.py  feedback_purge.py  feedback_request_body.py  main.py  membership_resolver.py  models.py  rag_answer_services.py  rag_domain.py  rag_feedback_domain.py  rag_feedback_services.py  rag_runtime_client.py  rag_settings.py  repositories.py  routes.py  schemas.py  selected_chunk_reader.py  services.py  settings.py  storage_paths.py  vector_index_domain.py  vector_index_repositories.py  vector_index_services.py  (+1 more)
apps/api/tests/: conftest.py  runtime_child_fixture.py  test_api.py  test_auth_foundation.py  test_document_upload.py  test_phase3_postgres.py  test_phase3_unit.py  test_phase4_postgres.py  test_phase5_postgres.py  test_phase5_worker_unit.py  test_phase6_postgres.py  test_phase6_qdrant.py  test_phase6_real_model_opt_in.py  test_phase6_worker_unit.py  test_phase7_hardening_unit.py  test_phase7_postgres.py  test_phase7_real_models.py  test_phase7_unit.py  test_phase8_hardening_unit.py  test_phase8_postgres.py  test_phase8_unit.py  test_phase9_postgres.py  test_phase9_unit.py  test_storage_validation.py  test_worker_entrypoints.py
docs/: api.md  architecture.md  authentication-foundation.md  chunk-model.md  citation-model.md  database-model.md  department-auth-boundaries.md  department-membership-api.md  deployment.md  document-extraction.md  document-model.md  document-upload.md  embedding-model.md  evaluation-artifacts.md  evaluation-metrics.md  evaluation-quality-gates.md  evaluation-runner.md  evaluation-suites.md  feedback-retention.md  feedback-review.md  product-spec.md  qdrant-boundary.md  (+8 more)
services/rag-runtime/: Dockerfile  pyproject.toml
services/rag-runtime/deptslm_runtime/: __init__.py  main.py  model_child.py  models.py  settings.py  supervisor.py
services/rag-runtime/deptslm_worker/: __init__.py
services/rag-worker/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  worker.py
services/rag-worker/deptslm_worker/: __init__.py  __main__.py  artifact_reader.py  chunking.py  domain.py  embedding.py  embedding_runner.py  evaluation_pipeline.py  evaluation_queue.py  evaluation_settings.py  evaluator.py  extraction_runner.py  extractor.py  index_pipeline.py  index_queue.py  index_settings.py  indexer.py  model_admin.py  model_store.py  normalization.py  pipeline.py  qdrant_adapter.py  queue.py  settings.py  storage.py  vector_admin.py  vector_retrieval.py
(+24 files in other folders)
