[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deptslm-rag-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "safetensors>=0.5.0,<1.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "transformers>=4.51.0,<5.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["deptslm_runtime*", "deptslm_worker*"]
