[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deptslm-worker"
version = "0.1.0"
description = "DeptSLM PostgreSQL-backed document extraction worker"
requires-python = ">=3.11"
dependencies = [
    "deptslm-api==0.1.0",
    "fastapi>=0.115.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pypdf>=6.14.2,<7.0.0",
    "PyJWT>=2.10.0,<3.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
]

[tool.setuptools.packages.find]
include = ["deptslm_worker*"]
